# MedBot-teleg

./: .gitignore  CMakeLists.txt  MedBoxCodFinal.ino  Medbox.ino  MedboxTestada.ino  MedboxTesteLeds_copy_20250827183710.ino  README.md  main.c  medbot.py  token.inv
components/components/bt/host/nimble/nimble/nimble/host/src/: ble_gap.c
components/components/mbedtls/mbedtls/: CMakeLists.txt
main/: CMakeLists.txt  main.c  time_sinc.c  time_sinc.h
